<resources>
    <string name="app_name">Android-VideoView</string>

    <string name="service">Service</string>
    <string name="play">▶</string>
    <string name="pause">II</string>
    <string name="service_exit">X</string>
    <string name="make_gif">GIF</string>
    <string name="start">시작</string>
    <string name="end">끝</string>
    <string name="fps">fps</string>
    <string name="thumbnail">Thumbnail</string>
</resources>
