<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/service_frame_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000">

        <SurfaceView
            android:id="@+id/service_layout_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom">

            <Button
                android:id="@+id/service_play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/play"
                android:textColor="#ffffff"
                android:visibility="gone" />

            <Button
                android:id="@+id/service_pause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/pause"
                android:textColor="#ffffff"
                android:visibility="gone" />

            <Button
                android:id="@+id/service_exit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/service_exit"
                android:textColor="#ffffff"
                android:visibility="gone" />

        </LinearLayout>
    </FrameLayout>
</layout>